# GUMBO-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  Proba.txt  README.md  build.sh  test.py
lib/logger/: CMakeLists.txt  log.cpp  log.h
src/: .File.cpp.swp  .IO.cpp.swp  CMakeLists.txt  Error.cpp  Error.h  File.cpp  File.h  IO.cpp  IO.h  RawMode.cpp  RawMode.h  Row.cpp  Row.h  Window.cpp  Window.h  main.cpp
